using json-adapter