@@ -1,11 +1,11 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm'
-    id 'org.jetbrains.kotlin.kapt'
     id 'java-library'
 }
 
 dependencies {
     api project(':domain')
+    implementation project(':infrastructure:vertx-json-adapter')
     implementation 'org.slf4j:slf4j-api'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-common'
@@ -14,8 +14,6 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-reactor'
     api 'io.vertx:vertx-lang-kotlin-coroutines'
     implementation 'io.vertx:vertx-pg-client'
-    implementation 'org.mapstruct:mapstruct'
-    kapt 'org.mapstruct:mapstruct-processor'
     runtimeOnly 'ch.qos.logback:logback-classic'
 
     testImplementation(testFixtures(project(":domain")))
@@ -29,9 +27,8 @@ dependencies {
     testImplementation 'io.github.serpro69:kotlin-faker:1.5.0'
 }
 
-kapt {
-    javacOptions {
-        option("--enable-preview")
-        option("--module-path", compileJava.classpath.asPath)
-    }
+compileJava {
+    options.compilerArgs += [
+            '--patch-module', "codes.fdk.blueprint.api.infrastructure.persistence.postgres=${sourceSets.main.output.asPath}"
+    ]
 }
